src/main/kotlin/com/example/ggyunispring/error/member/GoogleIdTokenException.kt
package com.example.ggyunispring.error.member

class GoogleIdTokenException : RuntimeException() {
}